<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".view.DailyWork">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerEmploye"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_custom_top"
        android:background="@color/white" />


    <androidx.appcompat.widget.SearchView
        android:id="@+id/inputSearch"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_custom"
        app:queryHint="@string/searchDate" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_custom_top"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_custom"
            android:layout_weight="1"
            android:clickable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/totalPrestado"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:editable="false"
                android:hint="@string/totalPrestado" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_custom"
            android:layout_weight="1"
            android:clickable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/totalInteres"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:editable="false"
                android:hint="@string/totalInteres" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_custom"
            android:layout_weight="1"
            android:clickable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/totalGanancia"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:editable="false"
                android:hint="@string/totalGanancianeto" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:background="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_custom"
        android:clickable="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/totalPagado"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:editable="false"
            android:hint="@string/totalPagado" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/empty"
        style="@style/textStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:text="@string/empty"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>